--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Register</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="dark">
 
 <div class="app-container">
-  <h1>Login</h1>
+  <h1>Create Account</h1>
 
   <div class="card">
     <form method="POST">
@@ -18,17 +18,20 @@
 
       <input type="text" name="username" placeholder="Username" required>
 
-      <input type="password" name="password" placeholder="Password" required>
+      <input type="text" name="nickname" placeholder="Nickname" required>
 
-      <button class="btn primary">Login</button>
+      <input type="password" name="password" placeholder="Password (min 6 chars)" required>
+
+      <button class="btn primary">Register</button>
     </form>
   </div>
 
   <p class="center">
-    Don’t have an account?
-    <a href="/register">Register</a>
+    Already have an account?
+    <a href="/login">Login</a>
   </p>
 </div>
 
 </body>
 </html>
+
